sjengida/g0/reset_board
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/reset_board/src/utils.c:1578:23: error: use of undeclared identifier 'unk_425A40'
qmemcpy( init_board, &unk_425A40, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/reset_board/src/obj/utils.o] Error 1
